# dev

./: Dockerfile  docker-compose.yml  install.lua  install.sh  pyproject.toml
dotfiles/config/nvim/: lazy-lock.json
dotfiles/config/nvim/lua/config/: keymaps.lua  options.lua
dotfiles/config/nvim/lua/plugins/: extras.lua
dotfiles/config/zsh/: .zshenv  .zshrc  aliases.zsh
